# ChangeLog for net-analyzer/net-snmp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.281 2014/05/03 14:19:36 maekke Exp $

  03 May 2014; Markus Meier <maekke@gentoo.org> net-snmp-5.7.3_pre3.ebuild:
  arm stable, bug #509110

  30 Apr 2014; Jeroen Roovers <jer@gentoo.org> net-snmp-5.7.3_pre3.ebuild:
  USE=python: set DEPEND on dev-python/setuptools[${PYTHON_USEDEP}],
  REQUIRED_USE to $PYTHON_REQUIRED_USE (bug #496782).

  30 Apr 2014; Jeroen Roovers <jer@gentoo.org> net-snmp-5.7.3_pre3.ebuild:
  Stable for HPPA (bug #509110).

  30 Apr 2014; Agostino Sarubbo <ago@gentoo.org> net-snmp-5.7.3_pre3.ebuild:
  Stable for x86, wrt bug #509110

  30 Apr 2014; Agostino Sarubbo <ago@gentoo.org> net-snmp-5.7.3_pre3.ebuild:
  Stable for amd64, wrt bug #509110

*net-snmp-5.7.3_pre3 (30 Apr 2014)

  30 Apr 2014; Jeroen Roovers <jer@gentoo.org> -net-snmp-5.7.2.1-r1.ebuild,
  +net-snmp-5.7.3_pre3.ebuild:
  Version bump (bug #509110).

*net-snmp-5.7.2.1-r1 (23 Apr 2014)

  23 Apr 2014; Jeroen Roovers <jer@gentoo.org> +net-snmp-5.7.2.1-r1.ebuild,
  +files/net-snmp-5.7.2.1-phony.patch:
  Fix parallel make some more (bug #508392).

  06 Apr 2014; Mike Frysinger <vapier@gentoo.org> net-snmp-5.7.2.1.ebuild:
  Mark arm64/s390/sh stable.

  24 Mar 2014; Jeroen Roovers <jer@gentoo.org> -net-snmp-5.7.2-r1.ebuild:
  Old.

  24 Mar 2014; Agostino Sarubbo <ago@gentoo.org> net-snmp-5.7.2.1.ebuild:
  Stable for ppc64, wrt bug #502968

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> net-snmp-5.7.2.1.ebuild:
  Stable for alpha, wrt bug #502968

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org> net-snmp-5.7.2.1.ebuild:
  Stable for ia64, wrt bug #502968

  17 Mar 2014; Jeroen Roovers <jer@gentoo.org> net-snmp-5.7.2.1.ebuild:
  Add epatch_user.

  16 Mar 2014; Agostino Sarubbo <ago@gentoo.org> net-snmp-5.7.2.1.ebuild:
  Stable for ppc, wrt bug #502968
