@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/net-snmp
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.281 2014/05/03 14:19:36 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.282 2014/05/05 15:56:24 jer Exp $
+
+  05 May 2014; Jeroen Roovers <jer@gentoo.org> net-snmp-5.7.3_pre3.ebuild:
+  Fix USE=-python by Jonathan Callen (bug #509600).
 
   03 May 2014; Markus Meier <maekke@gentoo.org> net-snmp-5.7.3_pre3.ebuild:
   arm stable, bug #509110
